2.1.0/_sources/gallery/text_labels_and_annotations/accented_text.rst.txt


.. _sphx_glr_gallery_text_labels_and_annotations_accented_text.py:


=================================
Using accented text in matplotlib
=================================

Matplotlib supports accented characters via TeX mathtext or unicode.

Using mathtext, the following accents are provided: \hat, \breve, \grave, \bar,
\acute, \tilde, \vec, \dot, \ddot.  All of them have the same syntax,
e.g., to make an overbar you do \bar{o} or to make an o umlaut you do
\ddot{o}.  The shortcuts are also provided, e.g.,: \"o \'e \`e \~n \.x
\^y





.. rst-class:: sphx-glr-horizontal


    *

      .. image:: /gallery/text_labels_and_annotations/images/sphx_glr_accented_text_001.png
            :scale: 47

    *

      .. image:: /gallery/text_labels_and_annotations/images/sphx_glr_accented_text_002.png
            :scale: 47





.. code-block:: python

    from __future__ import unicode_literals
    import matplotlib.pyplot as plt

    # Mathtext demo
    fig, ax = plt.subplots()
    ax.plot(range(10))
    ax.set_title(r'$\ddot{o}\acute{e}\grave{e}\hat{O}'
                 r'\breve{i}\bar{A}\tilde{n}\vec{q}$', fontsize=20)

    # Shorthand is also supported and curly braces are optional
    ax.set_xlabel(r"""$\"o\ddot o \'e\`e\~n\.x\^y$""", fontsize=20)
    ax.text(4, 0.5, r"$F=m\ddot{x}$")
    fig.tight_layout()

    # Unicode demo
    fig, ax = plt.subplots()
    ax.set_title("GISCARD CHAHUTÉ À L'ASSEMBLÉE")
    ax.set_xlabel("LE COUP DE DÉ DE DE GAULLE")
    ax.set_ylabel('André was here!')
    ax.text(0.2, 0.8, 'Institut für Festkörperphysik', rotation=45)
    ax.text(0.4, 0.2, 'AVA (check kerning)')

    plt.show()

**Total running time of the script:** ( 0 minutes  0.063 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: accented_text.py <accented_text.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: accented_text.ipynb <accented_text.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
